# crius

./: .gitignore  CRICTL_INTEGRATION_GAP_REPORT.md  Cargo.toml  Makefile  PROJECT_STATUS.md  README.md  README.zh-CN.md  build.rs  build.sh  crius.conf  crius.service  crs-plan.md
docs/: architecture.md  config-matrix.md  kubeadm.md  nri.md
docs/en/: architecture.md  checkpoint-restore.md  config-matrix.md  crs.md  kubeadm.md  networking.md  nri.md  operations.md  rootless.md
docs/zh/: architecture.md  checkpoint-restore.md  config-matrix.md  crs.md  kubeadm.md  networking.md  nri.md  operations.md  rootless.md
examples/cni/: crius-bridge.conflist
src/: attach.rs  error.rs  lib.rs  main.rs  trace_export.rs
src/cgroups/: mod.rs
src/config/: mod.rs  tests.rs  validation.rs
src/crs/: annotations.rs  args.rs  builders.rs  client.rs  context.rs  error.rs  format.rs  ids.rs  main.rs  mod.rs  parsers.rs  streaming.rs
src/image/: content_store.rs  layer.rs  metadata_store.rs  mod.rs  policy.rs  pull_cgroup.rs  snapshotter.rs  tests.rs
src/metrics/: mod.rs  server.rs
src/network/: cni.rs  error.rs  mod.rs  multi.rs  netlink.rs  port_mapping.rs  types.rs
src/nri/: adjust.rs  api.rs  config.rs  convert.rs  default_validator.rs  domain.rs  error.rs  manager.rs  merge.rs  mod.rs  transport.rs
src/oci/: mod.rs  spec.rs
src/pod/: mod.rs  tests.rs
src/proto/: mod.rs
src/rootless/: mod.rs
src/runtime/: backend.rs  mod.rs  runc_backend.rs  shim_manager.rs  tests.rs  wasm_direct_backend.rs
src/security/: apparmor.rs  cdi.rs  devices.rs  mod.rs  resource_classes.rs  seccomp.rs  selinux.rs  spec_patch.rs
src/server/: annotations.rs  container_handlers.rs  events.rs  mod.rs  pod_handlers.rs  recovery.rs  responses.rs  seccomp_notifier.rs  service.rs  state_model.rs  stats.rs  status.rs  streaming_handlers.rs  tests.rs  tests_lifecycle.rs  tests_lifecycle_checkpoint.rs  tests_lifecycle_common.rs  tests_lifecycle_container_runtime.rs  tests_lifecycle_create_pod.rs  tests_lifecycle_exec_attach.rs  tests_lifecycle_mounts.rs  tests_lifecycle_nri.rs  tests_lifecycle_nri_domain.rs  tests_lifecycle_port_forward.rs  tests_lifecycle_recovery.rs  tests_lifecycle_state_model.rs  tests_lifecycle_stats_events.rs  tests_lifecycle_status_config.rs  tests_metrics.rs  tests_recovery.rs  tests_status.rs  tests_streaming.rs
src/services/: diagnostics.rs  event.rs  health.rs  introspection.rs  local.rs  mod.rs
src/shim/: daemon.rs  io.rs  main.rs  mod.rs  process.rs  subreaper.rs
src/shim_rpc/: client.rs  mod.rs  proto.rs  server.rs  wire.rs
src/state/: mod.rs
src/storage/: mod.rs  persistence.rs  volume.rs
src/streaming/: config.rs  mod.rs  spdy.rs  spdy_dictionary.rs  tests.rs
src/test_support/: mod.rs
tests/: crs_args.rs  crs_commands.rs  diagnostics.rs  integration.rs  integration_test.rs  integration_tests.rs
(+47 files in other folders)
